# alpha-klima-notebooks

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
notebooks/: CP_hazard_screening.ipynb  RealEstateExercise.ipynb  asset_impact.ipynb  bank_pipeline.ipynb  hazard_data.ipynb  plots.py
notebooks/auxiliary_functions/: portfolio_asset_plotly_charts.py  portfolio_metrics_plotly_charts.py
resources/: assets_Ironbank_2025-05-13.json  example_bank_portfolio.json  example_portfolio.csv
